--- a/templates/upload.html
+++ b/templates/upload.html
@@ -141,9 +141,9 @@
 
 <body>
   <header>
-    <div class="logo">
-      <span class="brand">petcare</span>
-      <span class="brand-subtitle">PET SERVICES</span>
+ <div class="logo">
+      <span class="brand">Memoria</span>
+      <span class="brand-subtitle">Your company safe & AI our files </span>
     </div>
 
     <!-- Navigation Tabs (Desktop) -->
